<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamb</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New game</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="resume">Resume</string>
    <string name="player_1">Player 1</string>
    <string name="straight">straight</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_u2211">\u2211</string>
    <string name="max">max</string>
    <string name="triling">triling</string>
    <string name="full">full</string>
    <string name="poker">poker</string>
    <string name="yamb">yamb</string>
    <string name="min">min</string>
    <string name="play">Play</string>
    <string name="cancel">Cancel</string>
    <string name="total_score_0">total score: 0</string>
    <string name="die">Die</string>
    <string name="move_">move: 0</string>
    <string name="roll_">roll: 0/3</string>
    <string name="enter_name">Enter name</string>
    <string name="start">Start</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_5">Player 5</string>
    <string name="go">GO</string>
    <string name="_1_name">1. Name</string>
    <string name="_1360">1360</string>
    <string name="high_scores">High Scores</string>
    <string name="ok">OK</string>
    <string name="simulate">Simulate</string>

</resources>
