<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/move_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="20dp"
            android:text="@string/move_"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/player_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/player_1"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/roll_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/roll_"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/column_id_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/straight"
                android:textColor="@color/background_blue" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/arrow_up"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/updown"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/arrow_down"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/upondown"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/hand"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:src="@drawable/bell"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_board_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/row_id_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/_1"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/_2"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/_3"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/_4"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/_5"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/_6"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/_u2211"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/max"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/min"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/_u2211"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/triling"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/straight"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/full"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/poker"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/yamb"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/_u2211"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:text="@string/straight"
                    android:textColor="@color/background_blue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/board_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <GridView
                    android:id="@+id/num_board_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:numColumns="6"
                    android:stretchMode="columnWidth" />

                <GridView
                    android:id="@+id/num_sum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:numColumns="6"
                    android:stretchMode="columnWidth" />

                <GridView
                    android:id="@+id/min_max_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:numColumns="6"
                    android:stretchMode="columnWidth" />

                <GridView
                    android:id="@+id/min_max_sum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:numColumns="6"
                    android:stretchMode="columnWidth" />

                <GridView
                    android:id="@+id/spec_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:numColumns="6"
                    android:stretchMode="columnWidth" />

                <GridView
                    android:id="@+id/spec_sum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:numColumns="6"
                    android:stretchMode="columnWidth" />

                <TextView
                    android:id="@+id/total_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/darker_blue"
                    android:gravity="center"
                    android:text="@string/total_score_0"
                    android:textColor="#FFFFFFFF" />

                <LinearLayout
                    android:id="@+id/dice_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/die1"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:src="@drawable/one_die"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/die2"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:src="@drawable/two_die"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/die3"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:src="@drawable/three_die"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/die4"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:src="@drawable/four_die"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/die5"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:src="@drawable/five_die"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/die6"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:src="@drawable/six_die"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>